@@ -80,6 +80,7 @@ pyqtgraph-0.9.9  [unreleased]
     - Fixed GLGridItem.setSize
     - Fixed parametertree.Parameter.sigValueChanging
     - Fixed AxisItem.__init__(showValues=False)
+    - Fixed TableWidget append / sort issues
 
 pyqtgraph-0.9.8  2013-11-24
 
